refactor: String.format 대신 .formatted 를 통해 코드 간결화