@@ -44,8 +44,8 @@ public class SimpleDb {
       threadLocalConn.set(conn);
       return conn;
     } catch (SQLException e) {
-      logger.error(() -> String.format("DB connection failed: %s, url: %s, user: %s",
-          e.getMessage(), url, user));
+      logger.error(() -> "DB connection failed: %s, url: %s, user: %s"
+          .formatted(e.getMessage(), url, user));
       throw new RuntimeException("DB connection failed", e);
     }
   }
@@ -60,8 +60,8 @@ public class SimpleDb {
 
       ps.executeUpdate();
     } catch (SQLException e) {
-      logger.error(e, () -> String.format("SQL execution failed: %s, SQL: %s, bindParams: %s",
-          e.getMessage(), sql, Arrays.toString(params)));
+      logger.error(e, () -> "SQL execution failed: %s, SQL: %s, bindParams: %s"
+          .formatted(e.getMessage(), sql, Arrays.toString(params)));
       throw new RuntimeException("SQL execution failed", e);
     }
   }
@@ -80,7 +80,7 @@ public class SimpleDb {
       conn.close();
       threadLocalConn.remove();
     } catch (SQLException e) {
-      logger.error(e, () -> String.format("Failed to close DB connection: %s", e.getMessage()));
+      logger.error(e, () -> "Failed to close DB connection: %s".formatted(e.getMessage()));
     }
   }
 
@@ -94,7 +94,7 @@ public class SimpleDb {
       conn.setAutoCommit(false);
       isInTransaction = true;
     } catch (SQLException e) {
-      logger.error(e, () -> String.format("Failed to set auto commit: %s", e.getMessage()));
+      logger.error(e, () -> "Failed to set auto commit: %s".formatted(e.getMessage()));
       throw new RuntimeException("Failed to start transaction", e);
     }
   }
@@ -107,7 +107,7 @@ public class SimpleDb {
       conn.setAutoCommit(true);
       isInTransaction = false;
     } catch (SQLException e) {
-      logger.error(e, () -> String.format("Failed to commit: %s", e.getMessage()));
+      logger.error(e, () -> "Failed to commit: %s".formatted(e.getMessage()));
       throw new RuntimeException("Failed to commit", e);
     }
   }
@@ -120,7 +120,7 @@ public class SimpleDb {
       conn.setAutoCommit(true);
       isInTransaction = false;
     } catch (SQLException e) {
-      logger.error(e, () -> String.format("Failed to rollback: %s", e.getMessage()));
+      logger.error(e, () -> "Failed to rollback: %s".formatted(e.getMessage()));
       throw new RuntimeException("Failed to commit", e);
     }
   }
